# shelfbot.esp32.wroom-idf

./: .gitignore  CALIBRATION_PLAN.md  CMakeLists.txt  MEASUREMENT_DIAGNOSIS.md  README.md  VL53L1_ANALYSIS.md  partitions.csv
components/: README.md
components/duart_modbus/: CMakeLists.txt  duart_modbus.cpp
components/firmware_version/: CMakeLists.txt  firmware_version.cpp  firmware_version.hpp
components/http_server/: CMakeLists.txt  http_server.c  http_server.cpp  http_server.h  http_server.hpp  index.html
components/http_server/include/: http_server.hpp
components/idf_includes/: CMakeLists.txt
components/led_control/: CMakeLists.txt  led_control.c  led_control.cpp  led_control.h
components/lydsto_driver/: CMakeLists.txt  lydsto_lidar.cpp
components/motor_control/: CMakeLists.txt  motor_control.c  motor_control.cpp  motor_control.h  motor_control.hpp
components/sensor_control/: CMakeLists.txt  i2c_scanner.cpp  lidar_sensor.cpp  lydsto_lidar.cpp  lydsto_sensor.cpp  sensor_control.cpp  sensor_control_facade.cpp  sensor_manager.cpp  tof400f_modbus.cpp  tof400f_modbus_sensor.cpp  tof_sensor.cpp  tof_sensor_driver.cpp  ultrasonic_sensor.cpp
components/sensor_control/include/: i2c_scanner.hpp  lidar_sensor.hpp  lydsto_lidar.hpp  lydsto_sensor.hpp  sensor_common.h  sensor_common.hpp  sensor_control.hpp  sensor_control_facade.hpp  sensor_manager.hpp  tof400f_modbus.hpp  tof400f_modbus_sensor.hpp  tof_sensor.h  tof_sensor.hpp  tof_sensor_driver.h  ultrasonic_sensor.h  ultrasonic_sensor.hpp
main/: CMakeLists.txt  main.c  main.cpp
scripts/: env.check.sh
(+26 files in other folders)
